src/golden/functions/typeerrors/test.golden/guarderrors.fl
	guarded x
		| 42 = "hello"
